@@ -2,6 +2,8 @@ Revision history for Perl extension Starch::Store::Catalyst::Plugin::Session.
 
 {{$NEXT}}
 
+ - Support relative package names in the store_class argument.
+
 0.03 2016-10-09
 
  - Prepend "session:" to the keys so that we're backwards compatible
